# lumis4j

./: .gitignore  Notes.md  README.md  jbang-catalog.json  lumis.wasm  lumis4j.java  pom.xml
.github/workflows/: build-wasm.yml  ci.yml  release.yml  wasm-build.yml
core/: pom.xml
core/src/main/java-templates/io/roastedroot/lumis4j/core/: WasmResource.java
core/src/main/java/io/roastedroot/lumis4j/core/: Formatter.java  Highlighter.java  Lang.java  Lumis.java  LumisResult.java  Theme.java
core/src/test/java/io/roastedroot/lumis4j/core/: LumisTest.java  PackageSettings.java
core/src/test/resources/fixtures/bamboo/: code
core/src/test/resources/fixtures/base/: output
core/src/test/resources/fixtures/default/: code
core/src/test/resources/fixtures/java/: code
core/src/test/resources/fixtures/kotlin/: code
core/src/test/resources/fixtures/rust/: code
core/src/test/resources/io/roastedroot/lumis4j/core/: LumisTest.bbcodeFormatter.approved.txt  LumisTest.bbcodeFormatterWithoutTheme.approved.txt  LumisTest.changeLang.approved.txt  LumisTest.changeTheme.approved.txt  LumisTest.csv.approved.txt  LumisTest.inlineHtmlFormatter.approved.html  LumisTest.java.approved.txt  LumisTest.linkedHtmlFormatter.approved.html  LumisTest.readmeExampleJavaCatppuccin.approved.html  LumisTest.readmeExampleJavaScriptDracula.approved.html  LumisTest.verifyKotlinLanguage.approved.txt  LumisTest.wat.approved.txt
wasm-build/: .gitignore  Cargo.toml  Makefile
wasm-build/src/: bbcode.rs  lib.rs
