[package]
name = "lumis"
version = "0.1.0"

[lib]
name = "lumis"
crate-type = ["cdylib"]

[dependencies]
# use a minimal build during development
# lumis = { version = "0.1", default-features = false, features = [
#     "lang-rust",
#     "lang-javascript",
#     "lang-csv",
#     "lang-java"
# ] }
# full build
lumis = { version = "0.1.3", features = ["all-languages"] }
strum = { version = "0.27", features = ["derive"] }

[profile.release]
opt-level = 'z'
